--- a/notes/index.html
+++ b/notes/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/part-1.ts"></script>
+    <!-- <script type="module" src="/notes/src/part-2.ts"></script> -->
   </body>
 </html>
