modifications in part-2 + part-3 generics completed

--- a/notes/index.html
+++ b/notes/index.html
@@ -7,7 +7,15 @@
   </head>
   <body>
     <div id="app"></div>
+    <div>
+      hello world
+    </div>
+    <input type="text" placeholder="type here" class="text-input">
+    <button class="click-button">
+      click me 
+    </button>
     <!-- <script type="module" src="./src/part-1.ts"></script> -->
-    <script type="module" src="./src/part-2.ts"></script>
+    <!-- <script type="module" src="./src/part-2.ts"></script> -->
+    <script type="module" src="./src/part-3.ts"></script>
   </body>
 </html>
