--- a/notes/index.html
+++ b/notes/index.html
@@ -17,6 +17,7 @@
     <!-- <script type="module" src="./src/part-1.ts"></script> -->
     <!-- <script type="module" src="./src/part-2.ts"></script> -->
     <!-- <script type="module" src="./src/part-3.ts"></script> -->
-    <script type="module" src="./src/part-4.ts"></script>
+    <!-- <script type="module" src="./src/part-4.ts"></script> -->
+    <script type="module" src="./src/part-5.ts"></script>
   </body>
 </html>
